Fixed changes on mobile adaptation for 820px.

--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ h4 {
 }
 .text {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   column-count: 3;
   text-align: center;
   margin: 14em 0 0em;
@@ -176,7 +176,7 @@ h3 {
 }
 .column {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   flex-direction: row;
   column-gap: 1.5em;
   margin: 1.7em;
@@ -434,6 +434,12 @@ h6 {
 @media screen and (max-width: 820px) {
   .gg {
     max-width: 90%;
+  }
+  .text {
+    flex-wrap: wrap;
+  }
+  .column {
+    flex-wrap: wrap;
   }
   .wanna {
     padding: 5em 3em;
